@@ -6,7 +6,7 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 /**
- * Problem: https://leetcode.com/problems/search-insert-position/
+ * Problem: <a href="https://leetcode.com/problems/search-insert-position/">...</a>
  */
 
 public class SearchInsert {
@@ -14,15 +14,15 @@ public class SearchInsert {
     public static int searchInsert(int[] nums, int target, boolean verbose) {
 
         int left = 0;
-        int right = nums.length-1;
-        while(left <= right){
+        int right = nums.length - 1;
+        while (left <= right) {
             int mid = left + (right - left) / 2;
             if (verbose) {
                 printWindow(left, right, left + (right - left) / 2, nums);
             }
-            if (nums[mid] == target){
+            if (nums[mid] == target) {
                 return mid;
-            } else if ( target < nums[mid] ){
+            } else if (target < nums[mid]) {
                 right = mid - 1;
             } else {
                 left = mid + 1;
@@ -32,14 +32,15 @@ public class SearchInsert {
 
     }
 
-    public static int sanityCheck(int[] nums, int target){
+    public static int sanityCheck(int[] nums, int target) {
 
         List<Integer> toList = Arrays.stream(nums).boxed().collect(Collectors.toList());
         toList.add(target);
-        List<Integer> why = toList.stream().distinct().sorted().collect(Collectors.toList());
+        List<Integer> why = toList.stream().distinct().sorted().toList();
         return why.indexOf(target);
     }
-    public static void printWindow(int left, int right, int mid, int[] nums){
+
+    public static void printWindow(int left, int right, int mid, int[] nums) {
         StringBuilder window = new StringBuilder();
         StringBuilder display = new StringBuilder();
         StringBuilder header = new StringBuilder();
@@ -49,28 +50,28 @@ public class SearchInsert {
         header.append("|");
 
         int i = 0;
-        while (i < nums.length){
+        while (i < nums.length) {
 
             int counter = 0;
-            if (i == left){
+            if (i == left) {
                 display.append(" L ");
-                counter+=3;
+                counter += 3;
             }
             if (i == right) {
                 display.append(" R ");
-                counter+=3;
+                counter += 3;
             }
             if (i == mid) {
                 display.append(" M ");
-                counter+=3;
+                counter += 3;
             }
             if (counter == 0) {
                 display.append("   ");
-                counter+=3;
+                counter += 3;
             }
 
             display.append("|");
-            counter -=1;
+            counter -= 1;
             header.append(String.format("%1$" + counter + "s |", i));
             window.append(String.format("%1$" + counter + "s |", nums[i]));
 
